fixed some spacing issues

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -76,6 +76,7 @@
 
 body {
   overflow-x: hidden;
+  min-height: 100%;
 }
 
 .navigation {
@@ -149,6 +150,13 @@ body {
   width: 70%;
   margin: 0 auto;
   font-size: 1.25rem;
+  // @include flex(column, 1rem);
+
+  .scroll-down {
+    @include flex(row, 1rem);
+    flex-wrap: wrap;
+    align-self: flex-end;
+  }
 }
 
 .introduction {
@@ -177,9 +185,9 @@ body {
 
 @media (max-width: 500px) {
   .hero {
-    width: 100%;
-    margin: 40% 5%;
-    padding: 0 0 0 0;
+    width: 95%;
+    min-height: 100%;
+    margin: 40% 0 0 5%;
     font-size: 1rem;
     padding: 0 !important;
   }
